current with logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
 
 # Server Port
 server.port = 8080
+
+#Logging
+logging.level.org.springframework.web=ERROR
+logging.level.com.pep=DEBUG
+#output to a temp_folder/file
+logging.file=${java.io.tmpdir}/application.log
+
+# Logging pattern for the console
+logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+
+# Logging pattern for file
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
