--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.hazelcast/hazelcast -->
+		<dependency>
+		    <groupId>com.hazelcast</groupId>
+		    <artifactId>hazelcast</artifactId>
+		    <version>3.8.6</version>
+		</dependency>
         
         <!-- Use Derby InMemoryDb -->
         <dependency>
