--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+		</dependency>
 
         <!-- JPA Data (We are going to use Repositories, Entities, Hibernate, etc...) -->
 
@@ -41,7 +46,7 @@
             <version>2.7.0</version>
             <scope>compile</scope>
         </dependency>
-
+		
         <!-- Use MySQL Connector-J -->
 
         <dependency>
