--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-spring</artifactId>
         </dependency>
+        <dependency>
+    		<groupId>javax.cache</groupId>
+    		<artifactId>cache-api</artifactId>
+		</dependency>
+        
         
         <!-- Use Derby InMemoryDb -->
         <dependency>
