debug level chnaged

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
 server.port = 8888
 
 #Logging
-logging.level.org.springframework.web=ERROR
-logging.level.com.pep=DEBUG
+#logging.level.org.springframework.web=ERROR
+logging.level.=DEBUG
 #output to a temp_folder/file
 logging.file=${java.io.tmpdir}/application.log
 
