adding jenkins support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ server.port = 8888
 
 #Logging
 #logging.level.org.springframework.web=ERROR
-logging.level.=DEBUG
+logging.level=DEBUG
 #output to a temp_folder/file
 logging.file=${java.io.tmpdir}/application.log
 
