--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>org.springframework</groupId>
     <artifactId>SpringBootMySQL</artifactId>
     <version>0.1.0</version>
+    <name>${name.from.jenkins}</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -101,19 +102,10 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <docker.image.prefix>springio</docker.image.prefix>
     </properties>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.3.4</version>
-                <configuration>
-                    <repository>${docker.image.prefix}/springbootmysql</repository>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
